WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33508
WebKit returns incorrect match count when first string match is on an element with user-select-none style
https://bugs.webkit.org/show_bug.cgi?id=33508
Summary
WebKit returns incorrect match count when first string match is on an element...
Enrica Casucci
Reported
2010-01-11 18:24:46 PST
WebKit returns incorrect match count when first string match is on an element with user-select-none style
Attachments
Patch
(2.46 KB, patch)
2010-01-11 18:26 PST
,
Enrica Casucci
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2010-01-11 18:26:35 PST
Created
attachment 46329
[details]
Patch
Darin Adler
Comment 2
2010-01-11 21:51:55 PST
ChangeLog should explain why there is no test case for this.
Eric Seidel (no email)
Comment 3
2010-01-12 04:05:38 PST
Attachment 46329
[details]
was posted by a committer and has review+, assigning to Enrica Casucci for commit.
Enrica Casucci
Comment 4
2010-01-12 09:17:39 PST
Committed revision 53142.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug