WebKit returns incorrect match count when first string match is on an element with user-select-none style https://bugs.webkit.org/show_bug.cgi?id=33508 <rdar://problem/7482143>

Reviewed by Darin Adler.

If we use VisiblePosition to calculate the start of the new search range,
we skip all the nodes with user-select-none style, producing an incorrect
match count.
        
No new tests: there are no API's available to Javascript to verify the
number of matches found.

* page/Frame.cpp:
(WebCore::Frame::markAllMatchesForText): Changed to use the end of the previous
result range as the start of the new search range.



git-svn-id: svn://svn.chromium.org/blink/trunk@53142 bbb929c8-8fbe-4397-9dbb-9b2b20218538